--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="lightGrey">#DDDDDD</color>
+    <color name="mediumGrey">#888888</color>
+    <color name="darkGrey">#222222</color>
 </resources>
