--- a/app/src/main/res/layout/frag_data_entry.xml
+++ b/app/src/main/res/layout/frag_data_entry.xml
@@ -78,6 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginEnd="8dp"
+                    android:hint="@string/description_text"
                     android:inputType="textAutoComplete" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -86,14 +87,13 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingTop="10dp">
+            android:paddingTop="80dp">
 
             <Button
                 android:id="@+id/btn_add_expense"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="25dp"
                 android:backgroundTint="@color/lightGrey"
                 android:clickable="false"
                 android:enabled="false"
@@ -106,9 +106,8 @@
             <Button
                 android:id="@+id/btn_cancel"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
                 android:backgroundTint="@color/lightGrey"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
