--- a/app/src/main/res/layout/frag_data_entry.xml
+++ b/app/src/main/res/layout/frag_data_entry.xml
@@ -24,7 +24,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="412dp"
-        android:layout_height="373dp"
+        android:layout_height="600dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingTop="20dp"
@@ -82,12 +82,23 @@
                     android:inputType="textAutoComplete" />
             </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:id="@+id/txt_add_expenses_error"
+            android:text=""
+            android:textColor="#FF0000"
+            android:visibility="invisible"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingTop="80dp">
+            android:paddingTop="250dp">
+
+
 
             <Button
                 android:id="@+id/btn_add_expense"
@@ -97,8 +108,8 @@
                 android:backgroundTint="@color/lightGrey"
                 android:clickable="false"
                 android:enabled="false"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:text="@string/btn_add_expense"
                 android:textColor="@color/darkGrey"
                 android:textSize="15sp" />
@@ -109,8 +120,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
                 android:backgroundTint="@color/lightGrey"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:text="@string/btn_cancel"
                 android:textColor="@color/darkGrey"
                 android:textSize="15sp" />
