--- a/app/src/main/res/layout/frag_activity_main.xml
+++ b/app/src/main/res/layout/frag_activity_main.xml
@@ -41,6 +41,7 @@
         android:layout_marginTop="150dp"
         android:layout_marginBottom="100dp"
         android:text="@string/btn_settlement"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.828"
