All tests passed

--- a/app/src/main/res/layout/frag_activity_main.xml
+++ b/app/src/main/res/layout/frag_activity_main.xml
@@ -58,7 +58,7 @@
             app:layout_constraintTop_toBottomOf="@id/title">
 
             <TableLayout
-                android:id="@+id/table_expenses"
+                android:id="@+id/tbl_expenses"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="0,1,2">
